src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_comp/neq_boolean_float.deca
// Description :
//    test neq entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type boolean, float, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{
boolean a;
float b;
boolean c = a != b;
}
